implementacao de cobranca por assinatura
